--- a/static/homepage.css
+++ b/static/homepage.css
@@ -22,7 +22,7 @@ body{
 }
 
 a{
-    color: aliceblue;
+    color: rgb(240, 248, 255);
     text-decoration: none;
 
 }
@@ -42,6 +42,8 @@ a{
 
 .leftcontent{
     display: flex;
+    gap: 3%;
+    align-items:start;
     width: 75%;
     height:80%;
 }
@@ -60,7 +62,7 @@ a{
 
 #rightBody_left{
     height: 100vh;
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,26 +100,15 @@ a{
 
 
 #rightBody_left_context_top{
-    height: 40%;
+    height: 100%;
     width: 100%;
     border-radius: 30px;
     display: flex;
     flex-direction: column;
 
 }
-#rightBody_left_context_middle{
-    height: 28%;
-    width: 100%;
-    background-color: rebeccapurple;
-    border-radius: 30px;
 
-}
-#rightBody_left_context_bottom{
-    height: 30%;
-    width: 100%;
-    background-color: yellow;
-    border-radius: 30px;
-}
+
 
 
 
@@ -185,3 +176,90 @@ i{
     font-weight: bold;
 }
 
+
+#rightrightBody_left_context_top_name{
+    height: 7%;
+    width: 100%;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    
+    padding: 2%;
+    font-size: 130%;
+}
+
+#name_logo{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+    gap: 12%;
+    /* background-color: rebeccapurple; */
+    margin-right:5% ;
+    font-size: 160%;
+}
+
+
+
+#photo img{
+    height:100%;
+    width: 100%;
+    border-radius: 60%;
+
+}
+
+.nav_tab{
+    padding: 2%;
+    border-radius: 50px;
+    color: #F1DfDE;
+}
+
+#bottom_nav{
+    background-color: #1b1b1b;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 350px;
+    height: 60%;
+    margin:2%;
+    padding: 0px 0.5%;
+
+}
+
+#forms{
+    background-color: #1b1b1b;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60%;
+    margin:2%;
+    padding: 0px 0.5%;
+
+}
+
+
+button{
+    background-color: transparent;
+    border: 0px none;
+    color: #E6DFF1;
+    height: 30px;
+
+}
+
+button:hover{
+    background-color: white;
+    border-radius: 30px;
+    font-size: 120%;
+    color: #0a0a0a;
+}
+
+
+#rightBody_left_context_middle{
+    display: flex;
+    justify-content: center;
+}
